--- a/intro_html/index.html
+++ b/intro_html/index.html
@@ -45,7 +45,7 @@
         And finally they are wanting to get set up for future mars missions. The artemis program is a call back to our roots as a civilization.
        </p>
 <hr>
-
+<h3>The Artemis Program : &copy;</h3>
 <h4>Plans</h4>
 
 <ol>
