--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -18,7 +18,7 @@
         <a href="about.html">About</a>
     </nav>
     <main>
-        <h2>Voayger 1 missions and main focus</h2>
+        <h2>Voyager 1 missions and main focus</h2>
         <p></p>
         <img src="images/voyager 1.jpg" alt="Voyager 1">
         <h3>Voyager's travel through space</h3>
