--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -18,8 +18,26 @@
         <a href="about.html">About</a>
     </nav>
     <main>
-        <h2>Voyager 1 missions and main focus</h2>
-        <p></p>
+        <h2>Voyager 1 mission and main focus</h2>
+        <p> Voyager one was a space craft like no other. In 1977 Nasa had luanched its voyager 1 satillite to explore the the planets inside of
+            our solar system. Voyager 1's its main focus was Jupiter and Saturn it would orbit these planets gathering data about them and also 
+            taking data from there moons. The spacecraft was tasked with taking high quality images of the moons and planets. This data was crucial
+            for the program and to us here on earth. Voyager 1 had a heavy task of going where noone or no thing had gone before allowing us to land eyes
+            on these objects for the first time in a new way. The studies of these planets give us insight on our own planet and how it came to be formed.
+            
+            
+        </p>
+
+
+        <h3>The Journey</h3>
+        <p>Voyager 1 has been on a very long journey and its still on going. It was first task to observe planets, and thier moons.
+            but after that it had a very challenging task ahead. After the space craft completed it main objective the gears shifted
+            for something grand! Phase 2 
+        </p>
+
+
+
+
         <img src="images/voyager 1.jpg" alt="Voyager 1">
         <h3>Voyager's travel through space</h3>
     </main>
