--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -31,8 +31,10 @@
 
         <h3>The Journey</h3>
         <p>Voyager 1 has been on a very long journey and its still on going. It was first task to observe planets, and thier moons.
-            but after that it had a very challenging task ahead. After the space craft completed it main objective the gears shifted
-            for something grand! Phase 2 
+            But after that it had a very challenging task ahead, the heliosphere. After the space craft completed it's main objective the gears shifted
+            for something grand! Phase 2 of the voyager was to now leave our solar system to explore the outer reachers of our heliosphere. After
+            that it crossed over into interstellar space to start its amazing quest to wonder through the cosmos.
+        
         </p>
 
 
