--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -30,12 +30,25 @@
 
 
         <h3>The Journey</h3>
-        <p>Voyager 1 has been on a very long journey and its still on going. It was first task to observe planets, and thier moons.
+        <p>Voyager 1 has been on a very long journey and its still on going. It's was first task to observe planets, and thier moons.
             But after that it had a very challenging task ahead, the heliosphere. After the space craft completed it's main objective the gears shifted
             for something grand! Phase 2 of the voyager was to now leave our solar system to explore the outer reachers of our heliosphere. After
             that it crossed over into interstellar space to start its amazing quest to wonder through the cosmos.
         
         </p>
+
+        <hr>
+
+        <h4>Facts</h4>
+
+        <ul>
+             <li>Voyager is 15.6 billion miles away from earth. </li>
+             <li>The craft weighs 1,797 pounds.</li>
+             <li>It runs off of the decay of plutonium-238.</li>
+             <li>It's code can still be worked on today and uploaded to it.</li>
+        </ul>
+
+        
 
 
 
