--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -45,7 +45,7 @@
              <li>Voyager is 15.6 billion miles away from earth. </li>
              <li>The craft weighs 1,797 pounds.</li>
              <li>It runs off of the decay of plutonium-238.</li>
-             <li>It's code can still be worked on today and uploaded to it.</li>
+             <li>It's code can still be worked on today and uploaded new code.</li>
         </ul>
 
         
