--- a/html5_css/about.html
+++ b/html5_css/about.html
@@ -40,6 +40,19 @@
             of billions of miles from us and are still holding up it is a true show of engineering and skill of Nasa and its people.
         </p>
 
+                <hr>
+
+        <h4>NASA's Voyager achievements</h4>
+
+        <ul>
+             <li>First man made object to go interstellar.</li>
+             <li>Voyager 2 is the only craft to visit Uranus and Neptune.</li>
+             <li>Observation for the first ever captured a volcanoes erupting on another moon IO.</li>
+             <li>First detections of lighting storms on another planet.</li>
+        </ul>
+
+        <img src="images/voyager 2.jpg" alt="Voyager 2">
+
     
     
     </main>
