--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -41,7 +41,7 @@
         <h4>Facts</h4>
 
         <ul>
-             <li>Voyager is 15.6 billion miles away from earth. </li>
+             <li><a href="https://science.nasa.gov/mission/voyager/voyager-1/" target="_blank">voyager1</a> </li>
              <li>The craft weighs 1,797 pounds.</li>
              <li>It runs off of the decay of plutonium-238.</li>
              <li>It's code can still be worked on today and uploaded new code.</li>
@@ -53,7 +53,7 @@
 
 
         <img src="images/voyager 1.jpg" alt="Voyager 1">
-        <h3>Voyager's travel through space</h3>
+       
     </main>
     <footer>&copy; 2025 Voyager 1 Spacecraft<footer>
     </div>
