--- a/html5_css/about.html
+++ b/html5_css/about.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
     <header>
-        <h1>Voyager 1 and The Golden Recored</h1>
+        <h1>Voyager 1 and The Golden Record</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -50,8 +50,8 @@
         <h4>NASA's Voyager achievements</h4>
 
         <ul>
-             <li>First man made object to go interstellar.</li>
-             <li>Voyager 2 is the only craft to visit Uranus and Neptune.</li>
+             <li><a href="https://www.scientificamerican.com/article/record-breaking-voyager-spacecraft-begin-to-power-down/" targert="_blank">powerdown</a></li>
+             <li><a href="https://physics.stackexchange.com/questions/25711/where-are-the-voyagers-going" target="_blank">voyager</a></li>
              <li>Observation for the first ever captured a volcanoes erupting on another moon IO.</li>
              <li>First detections of lighting storms on another planet.</li>
         </ul>
