--- a/html5_css/index.html
+++ b/html5_css/index.html
@@ -41,8 +41,8 @@
         <h4>Facts</h4>
 
         <ul>
-             <li><a href="https://science.nasa.gov/mission/voyager/voyager-1/" target="_blank">voyager1</a> </li>
-             <li>The craft weighs 1,797 pounds.</li>
+             <li><a href="https://science.nasa.gov/mission/voyager/voyager-1/" target="_blank">voyager-1</a> </li>
+             <li><a href="https://space.skyrocket.de/doc_sdat/voyager.htm" target="_blank">voyager</a></li>
              <li>It runs off of the decay of plutonium-238.</li>
              <li>It's code can still be worked on today and uploaded new code.</li>
         </ul>
@@ -53,6 +53,7 @@
 
 
         <img src="images/voyager 1.jpg" alt="Voyager 1">
+        <img src="images/jupiter.jpg" alt="Jupiter">
        
     </main>
     <footer>&copy; 2025 Voyager 1 Spacecraft<footer>
