--- a/avd_css/index.html
+++ b/avd_css/index.html
@@ -4,40 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Artemis Program</title>
+    <!-- Corrected path to CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div id="container">
-    <header>
-        <h1>Artemis Program Goals</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="mission.html">Mission</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section>
-            <p>
-                NASA’s Artemis Program is a bold initiative to return humans to the Moon for the first time in over 50 years. 
-                Building on the legacy of Apollo, Artemis aims to land the first woman and the next man on the lunar surface, 
-                explore more of the Moon than ever before, and establish a sustainable human presence there. 
-                This effort will not only advance scientific discovery but also prepare us for the next giant leap — sending astronauts to Mars.
-            </p>
-        </section>
-
-        <aside>
-            <h3>Mission Tasks</h3>
+        <header>
+            <h1>Artemis Program Goals</h1>
+        </header>
+        <nav>
             <ul>
-                <li>Launch the Orion spacecraft aboard the Space Launch System</li>
-                <li>Conduct crewed lunar flybys and landings</li>
-                <li>Build and operate the Lunar Gateway space station</li>
-                <li>Establish Artemis Base Camp on the Moon</li>
+                <li><a href="index.html" class="active-link">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="mission.html">Mission</a></li>
             </ul>
-        </aside>
+        </nav>
+        <main class="flex-layout">
+            <section>
+                <p>
+                    NASA’s Artemis Program is a bold initiative to return humans to the Moon for the first time in over 50 years. 
+                    Building on the legacy of Apollo, Artemis aims to land the first woman and the next man on the lunar surface, 
+                    explore more of the Moon than ever before, and establish a sustainable human presence there. 
+                    This effort will not only advance scientific discovery but also prepare us for the next giant leap — sending astronauts to Mars.
+                </p>
+            </section>
+
+            <aside>
+                <h3>Mission Tasks</h3>
+                <ul>
+                    <li>Launch the Orion spacecraft aboard the Space Launch System</li>
+                    <li>Conduct crewed lunar flybys and landings</li>
+                    <li>Build and operate the Lunar Gateway space station</li>
+                    <li>Establish Artemis Base Camp on the Moon</li>
+                </ul>
+            </aside>
+        </main>
 
         <h3>The Journey Ahead</h3>
         <p>
@@ -52,18 +54,18 @@
 
         <h4>Facts</h4>
         <ul>
-             <li><a href="https://www.nasa.gov/feature/artemis/" target="_blank">NASA Artemis Program Overview</a></li>
-             <li><a href="https://en.wikipedia.org/wiki/Artemis_program" target="_blank">Artemis Program on Wikipedia</a></li>
-             <li>Artemis will land the first woman and first person of color on the Moon.</li>
-             <li>The program will use the Orion spacecraft, Space Launch System, and Lunar Gateway.</li>
+            <li><a href="https://www.nasa.gov/feature/artemis/" target="_blank">NASA Artemis Program Overview</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Artemis_program" target="_blank">Artemis Program on Wikipedia</a></li>
+            <li>Artemis will land the first woman and first person of color on the Moon.</li>
+            <li>The program will use the Orion spacecraft, Space Launch System, and Lunar Gateway.</li>
         </ul>
 
-        <img src="images/artemis.jpg" alt="NASA Artemis Program">
+        <!-- Corrected image paths -->
+        <img src="images/artemis.jpg" alt="NASA Artemis Program" class="responsive-img">
         <hr>
-        <img src="images/moon-surface.jpg" alt="Astronaut on the Moon">
-       
-    </main>
- <footer>&copy; 2025 Artemis Program</footer>
+        <img src="images/moon-surface.jpg" alt="Astronaut on the Moon" class="responsive-img">
+
+        <footer>&copy; 2025 Artemis Program</footer>
     </div>
 </body>
 
