--- a/avd_css/about.html
+++ b/avd_css/about.html
@@ -56,9 +56,9 @@
              <li><a href="https://www.nasa.gov/missions/artemis-iii/" target="_blank">Artemis III Mission</a></li>
         </ul>
 
-        <img src="images/artemis.jpg" alt="NASA Artemis Program">
+        <img src="images/orion craft.webp" alt="Orion Spacecraft">
         <hr>
-        <img src="images/moon.jpg" alt="Astronaut on the Moon during Artemis mission">
+        <img src="images/Orion-Propulsion-System.jpg" alt="Orion System">
        
     </main>
  <footer>&copy; 2025 NASA Artemis Program</footer>
