--- a/avd_css/index.html
+++ b/avd_css/index.html
@@ -59,9 +59,9 @@
             <li>The program will use the Orion spacecraft, Space Launch System, and Lunar Gateway.</li>
         </ul>
 
-        <img src="images/artemis.jpg" alt="NASA Artemis Program" class="responsive-img">
+        <img src="images/Artemis 1.avif" alt="Artemis">
         <hr>
-        <img src="images/moon-surface.jpg" alt="Astronaut on the Moon" class="responsive-img">
+        <img src="images/artemis pic 2.avif" alt="Artemis">
 
         <footer>&copy; 2025 Artemis Program</footer>
     </div>
