--- a/avd_css/mission.html
+++ b/avd_css/mission.html
@@ -57,9 +57,9 @@
              <li><a href="https://www.nasa.gov/humans-in-space/artemis/human-landing-system/" target="_blank">NASA Human Landing System Overview</a></li>
         </ul>
 
-        <img src="images/artemis-components.jpg" alt="Illustration of Artemis Program components">
+        <img src="images/SLS engine.jpg" alt="Rocket engine">
         <hr>
-        <img src="images/orion.jpg" alt="NASA Orion spacecraft in space">
+        <img src="images/SLS.jpg" alt="SLS System">
        
     </main>
  <footer>&copy; 2025 NASA Artemis Program</footer>
