--- a/avd_css/index.html
+++ b/avd_css/index.html
@@ -19,13 +19,10 @@
                 <li><a href="mission.html">Mission</a></li>
             </ul>
         </nav>
-        <main class="flex-layout">
+        <main>
             <section>
                 <p>
-                    NASA’s Artemis Program is a bold initiative to return humans to the Moon for the first time in over 50 years. 
-                    Building on the legacy of Apollo, Artemis aims to land the first woman and the next man on the lunar surface, 
-                    explore more of the Moon than ever before, and establish a sustainable human presence there. 
-                    This effort will not only advance scientific discovery but also prepare us for the next giant leap — sending astronauts to Mars.
+                    
                 </p>
             </section>
 
@@ -42,11 +39,7 @@
 
         <h3>The Journey Ahead</h3>
         <p>
-            Artemis I successfully tested NASA’s new deep space systems without a crew, paving the way for Artemis II — 
-            the first crewed mission to orbit the Moon. Following that, Artemis III will land astronauts on the lunar surface, 
-            focusing on the Moon’s South Pole, a region rich in resources like water ice. 
-            These missions will demonstrate new technologies, strengthen international partnerships, 
-            and inspire the Artemis Generation to push the boundaries of exploration.
+            
         </p>
 
         <hr>
