--- a/avd_css/mission.html
+++ b/avd_css/mission.html
@@ -57,7 +57,7 @@
              <li><a href="https://www.nasa.gov/humans-in-space/artemis/human-landing-system/" target="_blank">NASA Human Landing System Overview</a></li>
         </ul>
 
-        <img src="images/SLS engine.jpg" alt="Rocket engine">
+        <img src="images/SLS engine.jpg" alt="SLS engine">
         <hr>
         <img src="images/SLS.jpg" alt="SLS System">
        
