--- a/avd_css/about.html
+++ b/avd_css/about.html
@@ -20,38 +20,33 @@
     </nav>
 
     <main>
-        <div> class="about_content">
-            <p>Kennedy Space Center, FL</p>
-            <p>+1 855-433-4210</p>
-            <p><a href="http://www.kennedyspacecenter.com/">http://www.kennedyspacecenter.com/</a></p>
+      <div class="about_content">
+        <p>Kennedy Space Center, FL</p>
+        <p>+1 855-433-4210</p>
+        <p><a href="http://www.kennedyspacecenter.com/">http://www.kennedyspacecenter.com/</a></p>
+      </div>
 
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.0833841673043!2d-80.620834!3d28.627262899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e0bbb3caf4ea65%3A0x5b7fc6372378346d!2sLaunch%20Complex%2039B%20-%20Kennedy%20Space%20Center!5e0!3m2!1sen!2sus!4v1757424404531!5m2!1sen!2sus" 
+        width="600" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
 
-        </div>
-
-       <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.0833841673043!2d-80.620834!3d28.627262899999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e0bbb3caf4ea65%3A0x5b7fc6372378346d!2sLaunch%20Complex%2039B%20-%20Kennedy%20Space%20Center!5e0!3m2!1sen!2sus!4v1757424404531!5m2!1sen!2sus" 
-    width="600" 
-    height="450" 
-    style="border:0;" 
-    allowfullscreen="" 
-    loading="lazy" 
-    referrerpolicy="no-referrer-when-downgrade">
-</iframe>
-
-
-
-<hr>
-
+      <hr>
 
       <section>
         <h2>How it helps us</h2>
-        <p>With anything Nasa does it directly benedfites us back on earth.
-            For instance the roads we drive on and battery powered tools we use 
-            were designed by Nasa and now we use battery powered tools all the 
-            time. And we drive on the road ways the have came up with, even down to
-            water filter systems we use to filter our water. The Artemis program will produce
-            new technology that will help progress our daily lives here on Earth.
-        
+        <p>
+          With anything NASA does, it directly benefits us back on Earth.
+          For instance, the roads we drive on and battery-powered tools we use 
+          were designed by NASA. We use battery-powered tools all the time, and 
+          we drive on roadways they helped develop. Even water filter systems we 
+          use today have roots in NASA technology. The Artemis program will produce
+          new technology that will help progress our daily lives here on Earth.
         </p>
       </section>
 
@@ -59,19 +54,19 @@
         <h3>Mission Tasks</h3>
         <ul>
           <li>Test the Orion in deep space</li>
-          <li>Preform crewed lunar flybys</li>
+          <li>Perform crewed lunar flybys</li>
           <li>Land astronauts on the Moon</li>
           <li>Plan for future Mars exploration</li>
         </ul>
       </aside>
 
       <h3>The Lunar Gateway</h3>
-      <p> The lunar gate is a new peiece of technology meant help lunar landings.
-        Nasa's lunar gateway will have a life support system aboard along with a 
-        sleeping uaters and labs for science. It will also have dockings systems
-        This will make it so the Orion spacecraft can doc along with lunar landers
-        and cargo ships. It will also have a advanced AI robotic arm to assit in spacewalks.
-      
+      <p>
+        The Lunar Gateway is a new piece of technology meant to help lunar landings.
+        NASA's Lunar Gateway will have a life support system aboard along with 
+        sleeping quarters and labs for science. It will also have docking systems
+        so the Orion spacecraft can dock along with lunar landers and cargo ships. 
+        An advanced AI robotic arm will assist in spacewalks.
       </p>
 
       <hr>
@@ -79,7 +74,7 @@
       <h4>Facts</h4>
       <ul>
         <li><a href="https://www.nasa.gov/specials/artemis/" target="_blank">NASA Artemis Program</a></li>
-        <li><a href="https://www.nasa.gov/missions/artemis-i/" target="_blank">Artemis One mission</a></li>
+        <li><a href="https://www.nasa.gov/missions/artemis-i/" target="_blank">Artemis One Mission</a></li>
         <li><a href="https://www.nasa.gov/missions/artemis-ii/" target="_blank">Artemis Two Mission</a></li>
         <li><a href="https://www.nasa.gov/missions/artemis-iii/" target="_blank">Artemis Three Mission</a></li>
       </ul>
