--- a/avd_css/mission.html
+++ b/avd_css/mission.html
@@ -8,7 +8,7 @@
 <body>
   <div id="container">
     <header>
-      <h1>Key Components For Mission Success</h1>
+      <h1>Key Components for Mission Success</h1>
     </header>
 
     <nav>
@@ -21,16 +21,16 @@
 
     <main>
       <section>
-        <p> The key components of the mission is it's the crafts, crew and ground based 
-            communications team. These three big parts are crucial the craft needs to be
-            able to handle the harsh envoirment of deep space its has to go 238,856 miles
-            away from Earth to the Moon. The Crew has to be very calm and able to work under 
-            pressure. and the grounds communications has to be able to have good signal to
-            keep the crew safe and help guide them through any thing goes wrong. This is vital 
-            so they can make on the fly changes to code or to help engineer a issue like the time
-            Astronuat Luca Parmitano he had water fill in the hood of his suit and ground control 
-            was able to figure out the issue and canceled his space walk.
-        
+        <p>
+          The key components of the mission are the spacecraft, crew, and ground‑based 
+          communications team. These three parts are crucial — the craft needs to be
+          able to handle the harsh environment of deep space, traveling 238,856 miles
+          from Earth to the Moon. The crew must remain calm and able to work under 
+          pressure, and ground communications must maintain a strong signal to
+          keep the crew safe and guide them if anything goes wrong.  
+          This is vital so they can make on‑the‑fly changes to code or help engineer a fix, 
+          like the time astronaut Luca Parmitano had water fill the hood of his suit — 
+          ground control identified the issue and canceled his spacewalk.
         </p>
       </section>
 
@@ -45,17 +45,17 @@
       </aside>
 
       <h3>The Future</h3>
-      <p>There will be long duration stays on the moon will the help of new EVA suits will
-        be ground breaking. It will be stronger than ever for these long stays on the lunar surface.
-        Crew rotations will be involved with the help of the lunar gateway. And then finally Mars the 
-        end goal. This system will be used as a refueling station for future space exploration. This 
-        tasks that has been provided by Nasa and will change life for humans more than we could imagine.
-      
+      <p>
+        There will be long‑duration stays on the Moon with the help of new EVA suits, 
+        which will be stronger than ever for extended missions on the lunar surface.  
+        Crew rotations will be supported by the Lunar Gateway. And then finally — Mars, 
+        the end goal. This system will be used as a refueling station for future space exploration.  
+        These tasks, provided by NASA, will change life for humans more than we can imagine.
       </p>
 
       <hr>
 
-      <h4>Learn More From NASA</h4>
+      <h4>Learn More from NASA</h4>
       <ul>
         <li><a href="https://www.nasa.gov/exploration/systems/sls/index.html" target="_blank">NASA Space Launch System Overview</a></li>
         <li><a href="https://www.nasa.gov/exploration/systems/orion/index.html" target="_blank">NASA Orion Spacecraft Overview</a></li>
