--- a/avd_css/index.html
+++ b/avd_css/index.html
@@ -19,58 +19,62 @@
       </ul>
     </nav>
 
-    <main class="multi_col">
-      <section>
-        <h2>Overview</h2>
-        <p>
-          The Artemis program is bringing us back to the Moon. This time we will be here to stay
-          and establish a lunar presence. The program will be set up in three stages. The first will not
-          have a crew aboard — it is just a test flight of the two crafts: Orion and the SLS.  
-          The second will be manned and will be a true test of the spacecrafts, with the goal to 
-          orbit around the Moon and return to Earth.  
-          The third stage is the true first step of the Artemis program. This will be historic — it has been 50 years since
-          humans have set foot on the lunar surface.
-        </p>
-      </section>
+    <main>
+      <div class="multi_col">
+        <section>
+          <h2>Overview</h2>
+          <p>
+            The Artemis program is bringing us back to the Moon. This time we will be here to stay
+            and establish a lunar presence. The program will be set up in three stages. The first will not
+            have a crew aboard — it is just a test flight of the two crafts: Orion and the SLS.  
+            The second will be manned and will be a true test of the spacecrafts, with the goal to 
+            orbit around the Moon and return to Earth.  
+            The third stage is the true first step of the Artemis program. This will be historic — it's been 50 years since
+            humans have set foot on the lunar surface.
+          </p>
+        </section>
 
-      <aside>
-        <h3>Mission Tasks</h3>
-        <ul>
-          <li>Launch the Orion spacecraft aboard the Space Launch System</li>
-          <li>Conduct crewed lunar flybys and landings</li>
-          <li>Set up Lunar Gateway</li>
-          <li>Construction of lunar base</li>
-        </ul>
-      </aside>
+        <aside>
+          <h3>Mission Tasks</h3>
+          <ul>
+            <li>Launch the Orion spacecraft aboard the Space Launch System</li>
+            <li>Conduct crewed lunar flybys and landings</li>
+            <li>Set up Lunar Gateway</li>
+            <li>Construction of lunar base</li>
+          </ul>
+        </aside>
+      </div>
 
-      <section>
-        <h2>Scientific Objectives</h2>
-        <p>
-          The scientific objective for the program, once landed on the Moon, will be a series 
-          of multiple lunar studies. The Moon hides secrets due to the constant bombardment of
-          comets and meteorites on its far side. This means ice could be buried deep inside the
-          crust — the LCROSS mission has confirmed this.  
-          This will benefit humanity in ways we cannot imagine. For instance, water is essential 
-          for life on the Moon and will help sustain a base for long stays on the lunar surface.  
-          Billions of kilograms of water are waiting to be found and studied.
-        </p>
-      </section>
+      <div class="multi_col">
+        <section>
+          <h2>Scientific Objectives</h2>
+          <p>
+            The scientific objective for the program, once landed on the Moon, will be a series 
+            of multiple lunar studies. The Moon hides secrets due to the constant bombardment of
+            comets and meteorites on its far side. This means ice could be buried deep inside the
+            crust — the LCROSS mission has confirmed this.  
+            This will benefit humanity in ways we cannot imagine. For instance, water is essential 
+            for life on the Moon and will help sustain a base for long stays on the lunar surface.  
+            Billions of kilograms of water are waiting to be found and studied.
+          </p>
+        </section>
 
-      <aside>
-        <h3>Technology</h3>
-        <ul>
-          <li>Orion spacecraft for manned transport</li>
-          <li>SLS for heavy lift</li>
-          <li>Lunar Gateway for orbiter support</li>
-          <li>Advanced EVA suits for the Moon</li>
-        </ul>
-      </aside>
+        <aside>
+          <h3>Technology</h3>
+          <ul>
+            <li>Orion spacecraft for manned transport</li>
+            <li>SLS for heavy lift</li>
+            <li>Lunar Gateway for orbiter support</li>
+            <li>Advanced EVA suits for the Moon</li>
+          </ul>
+        </aside>
+      </div>
     </main>
 
     <h3>On the Shoulders of Giants</h3>
     <p>
       This program is a direct call back to the 1960s and 70s at the height of exploration. Apollo 
-      was the program that started it all. Long‑term space exploration was changed by this rigorous 
+      was the program that started it all. Long-term space exploration was changed by this rigorous 
       program. Neil Armstrong, Buzz Aldrin, and Michael Collins were the big three to make it to the Moon 
       and complete a full mission to land, rejoin the command module, and return home.  
       Apollo had three astronauts per mission — two landed on the Moon and one orbited.  
@@ -95,3 +99,4 @@
   </div>
 </body>
 </html>
+
