--- a/avd_css/mission.html
+++ b/avd_css/mission.html
@@ -22,14 +22,14 @@
     <main>
       <section>
         <p>
-          The key components of the mission are the spacecraft, crew, and ground‑based 
-          communications team. These three parts are crucial — the craft needs to be
+          The key components of the mission are the spacecraft, crew, and ground based 
+          communications team. These three parts are crucial, the craft needs to be
           able to handle the harsh environment of deep space, traveling 238,856 miles
           from Earth to the Moon. The crew must remain calm and able to work under 
           pressure, and ground communications must maintain a strong signal to
           keep the crew safe and guide them if anything goes wrong.  
-          This is vital so they can make on‑the‑fly changes to code or help engineer a fix, 
-          like the time astronaut Luca Parmitano had water fill the hood of his suit — 
+          This is vital so they can make on the fly changes to code or help engineer a fix, 
+          like the time astronaut Luca Parmitano had water fill the hood of his suit 
           ground control identified the issue and canceled his spacewalk.
         </p>
       </section>
@@ -46,9 +46,9 @@
 
       <h3>The Future</h3>
       <p>
-        There will be long‑duration stays on the Moon with the help of new EVA suits, 
+        There will be long duration stays on the Moon with the help of new EVA suits, 
         which will be stronger than ever for extended missions on the lunar surface.  
-        Crew rotations will be supported by the Lunar Gateway. And then finally — Mars, 
+        Crew rotations will be supported by the Lunar Gateway. And then finally Mars, 
         the end goal. This system will be used as a refueling station for future space exploration.  
         These tasks, provided by NASA, will change life for humans more than we can imagine.
       </p>
