--- a/avd_css/mission.html
+++ b/avd_css/mission.html
@@ -21,6 +21,7 @@
 
     <main>
       <section>
+        <h2>Key Parts</h2>
         <p>
           The key components of the mission are the spacecraft, crew, and ground based 
           communications team. These three parts are crucial, the craft needs to be
