--- a/responsive/mission.html
+++ b/responsive/mission.html
@@ -8,15 +8,14 @@
 <body>
   <div id="container">
     <header>
-      <h1>Key Components for Mission Success</h1>
+      <img src="images/Banner.png" alt="Banner">
     </header>
 
     <nav>
       <ul>
-        <li><a href="index.html" class="active-link">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="mission.html">Mission</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
 
