--- a/responsive/gallery.html
+++ b/responsive/gallery.html
@@ -7,47 +7,46 @@
     <link rel="stylesheet" href="ccs/styles.css">
 </head>
 <body>
-      <div id="container"></div>
-    <header>
-      <img src="images/Banner.png" alt="Banner">
-    </header>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active-link">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="mission.html">Mission</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-      </ul>
-    </nav>
-    <main>
-      <h2>Rocket Upgrades</h2>
-      <hr>
-      <p> The rockets designed for the new space craft is like no other.
-         The core stage with 4 RS-25 engines filled with hydrogen
-         and liquid oxygen start its intial lift off along with the two side boosters.
-         The rs-25s make 2 million pounds of thrust. The booster have 7.2 giving a total of 8.8
-         million pounds of thrust. this is about a 15% power boost compared to the Saturn 5 rocket engines.
-          Overall the SLS got some nice upgrades including faster liftoff and pad clearing time.
-          It also has a upgraded upper stage for more cargo and which in turn allows longer operation time. 
-          The Artemis rocket is now the most powerful rocket ever made and since it bigger this means multi missions will 
-          be assigned.
-
-
-
-      </p>
-      <hr>
-      <h3>Engine components</h3>
-      <li>Low pressure fuel turbopump</li>
-      <li>High pressure  oxidizer turbopump</li>
-      <li>Main combustion chamber</li>
-      <li>nozzle with regenerative cooling system</li>
-        <section class="gallery">
-            <div class="col"><img src="images/rocketbooster.jpg" alt="rocketbooster"></div>
-            <div class="col"><img src="images/rocketbooster2.jpg" alt="rocketbooster2"></div>
-            <div class="col"><img src="images/rocket3.webp"alt="rocket3"></div>
-        </section>
-    </main>
-    <footer>copy; 2025 NASA Artemis Program </footer>
-  <div>
+    <div id="container">
+        <header>
+            <img src="images/Banner.png" alt="Banner">
+        </header>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active-link">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="mission.html">Mission</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h2>Rocket Upgrades</h2>
+            <hr>
+            <p>The rockets designed for the new spacecraft are like no other.
+               The core stage with 4 RS-25 engines filled with hydrogen
+               and liquid oxygen starts its initial lift-off along with the two side boosters.
+               The RS-25s make 2 million pounds of thrust. The boosters have 7.2, giving a total of 8.8
+               million pounds of thrust. This is about a 15% power boost compared to the Saturn V rocket engines.
+               Overall, the SLS got some nice upgrades including faster liftoff and pad clearing time.
+               It also has an upgraded upper stage for more cargo, which in turn allows longer operation time.
+               The Artemis rocket is now the most powerful rocket ever made and since it is bigger this means multiple missions will 
+               be assigned.
+            </p>
+            <hr>
+            <h3>Engine components</h3>
+            <ul>
+                <li>Low pressure fuel turbopump</li>
+                <li>High pressure oxidizer turbopump</li>
+                <li>Main combustion chamber</li>
+                <li>Nozzle with regenerative cooling system</li>
+            </ul>
+            <section class="gallery">
+                <div class="col"><img src="images/rocketbooster.jpg" alt="rocketbooster"></div>
+                <div class="col"><img src="images/rocketbooster2.jpg" alt="rocketbooster2"></div>
+                <div class="col"><img src="images/rocket3.webp" alt="rocket3"></div>
+            </section>
+        </main>
+        <footer>&copy; 2025 NASA Artemis Program</footer>
+    </div>
 </body>
 </html>
