--- a/responsive/gallery.html
+++ b/responsive/gallery.html
@@ -41,6 +41,7 @@
                 <li>Nozzle with regenerative cooling system</li>
             </ul>
             <section class="gallery">
+              <h3>Rocket Gallery</h3>
                 <div class="col"><img src="images/rocketbooster.jpg" alt="rocketbooster"></div>
                 <div class="col"><img src="images/rocketbooster2.jpg" alt="rocketbooster2"></div>
                 <div class="col"><img src="images/rocket3.webp" alt="rocket3"></div>
