--- a/responsive/mission.html
+++ b/responsive/mission.html
@@ -17,6 +17,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="mission.html">Mission</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
 
