--- a/responsive/gallery.html
+++ b/responsive/gallery.html
@@ -41,9 +41,13 @@
                 <li>Nozzle with regenerative cooling system</li>
             </ul>
             <h3>Rocket Gallery</h3>
+            <P>The new rockets are a sight to see they are the most robust and advanced we have made yet.</P>
             <section class="gallery">
+                 <p>Close up shot of liftoff.</P>
                 <div class="col"><img src="images/rocketbooster.jpg" alt="rocketbooster"></div>
+                 <p>Ground view</p>
                 <div class="col"><img src="images/rocketbooster2.jpg" alt="rocketbooster2"></div>
+                <p>Full view bottom of pad</p>
                 <div class="col"><img src="images/rocket3.webp" alt="rocket3"></div>
             </section>
         </main>
