--- a/responsive/gallery.html
+++ b/responsive/gallery.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <header>
-            <img src="images/Banner.png" alt="Banner">
+            <img src="images/Banner.png" alt="NASA Artemis Program Banner">
         </header>
         <nav>
             <ul>
@@ -22,16 +22,7 @@
         <main>
             <h2>Rocket Upgrades</h2>
             <hr>
-            <p>The rockets designed for the new spacecraft are like no other.
-               The core stage with 4 RS-25 engines filled with hydrogen
-               and liquid oxygen starts its initial lift-off along with the two side boosters.
-               The RS-25s make 2 million pounds of thrust. The boosters have 7.2, giving a total of 8.8
-               million pounds of thrust. This is about a 15% power boost compared to the Saturn V rocket engines.
-               Overall, the SLS got some nice upgrades including faster liftoff and pad clearing time.
-               It also has an upgraded upper stage for more cargo, which in turn allows longer operation time.
-               The Artemis rocket is now the most powerful rocket ever made and since it is bigger this means multiple missions will 
-               be assigned.
-            </p>
+            <p>The rockets designed for the new spacecraft are like no other. The core stage with 4 RS-25 engines filled with hydrogen and liquid oxygen starts its initial lift-off along with the two side boosters. The RS-25s make 2 million pounds of thrust. The boosters have 7.2, giving a total of 8.8 million pounds of thrust. This is about a 15% power boost compared to the Saturn V rocket engines. Overall, the SLS got some nice upgrades including faster liftoff and pad clearing time. It also has an upgraded upper stage for more cargo, which in turn allows longer operation time. The Artemis rocket is now the most powerful rocket ever made and since it is bigger this means multiple missions will be assigned.</p>
             <hr>
             <h3>Engine components</h3>
             <ul>
@@ -41,14 +32,20 @@
                 <li>Nozzle with regenerative cooling system</li>
             </ul>
             <h3>Rocket Gallery</h3>
-            <P>The new rockets are a sight to see they are the most robust and advanced we have made yet.</P>
+            <p>The new rockets are a sight to see; they are the most robust and advanced we have made yet.</p>
             <section class="gallery">
-                 <p>Close up shot of liftoff.</P>
-                <div class="col"><img src="images/rocketbooster.jpg" alt="rocketbooster"></div>
-                 <p>Ground view</p>
-                <div class="col"><img src="images/rocketbooster2.jpg" alt="rocketbooster2"></div>
-                <p>Full view bottom of pad</p>
-                <div class="col"><img src="images/rocket3.webp" alt="rocket3"></div>
+                <div class="col">
+                    <p>Close up shot of liftoff.</p>
+                    <img src="images/rocketbooster.jpg" alt="Close-up of Artemis rocket booster during liftoff">
+                </div>
+                <div class="col">
+                    <p>Ground view</p>
+                    <img src="images/rocketbooster2.jpg" alt="Ground view of Artemis rocket booster">
+                </div>
+                <div class="col">
+                    <p>Full view bottom of pad</p>
+                    <img src="images/rocket3.webp" alt="Full view of Artemis rocket on launch pad">
+                </div>
             </section>
         </main>
         <footer>&copy; 2025 NASA Artemis Program</footer>
