--- a/responsive/about.html
+++ b/responsive/about.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artemis Program</title>
   <link rel="stylesheet" href="ccs/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jacquard+24&family=Metamorphous&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="container">
@@ -90,3 +93,4 @@
   </div>
 </body>
 </html>
+```
